<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/minEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/MinVal"
        android:inputType="number" />

    <EditText
        android:id="@+id/maxEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/MaxVal"
        android:inputType="number" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/maxEditText"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/Button" />

</RelativeLayout>